working on alignment issue

--- a/Assignment_3/css/style.css
+++ b/Assignment_3/css/style.css
@@ -9,27 +9,25 @@ body {
   line-height: 1.6;
   color: #333;
 }
-
 .container {
-  
   width: 1200px;
-  margin: 0 auto;
+ margin:0 auto;
 }
 header {
   display: flex;
   width: 100%;
   color: white;
-  padding: 10px 0;
-  box-sizing: border-box;   
-  justify-content: space-between; 
-  position: sticky;
-  top: 0;
-  z-index: 1000;
+  padding: 15px 0;
+  align-items: center; 
+  justify-content: center; 
+  position: sticky; 
+  /* z-index: 1000; */
 }
 
 header div{
   display: flex;
   justify-content: space-between;
+  text-align: center;
   align-items: center;
 }
 
@@ -45,7 +43,7 @@ header div{
   list-style: none;
   gap: 25px;
 }
-
+ 
 .navLinks li a {
   color: white;
   padding: 10px 15px;
@@ -62,16 +60,15 @@ header div{
 }
 
 .bannerSection {
-  background: url("/Assignment_3/images/banner.svg") center / cover no-repeat;
+  background: url("../images/banner.svg") center / cover no-repeat;
   min-height: 100vh;
   display: flex;
-  margin-top:-80px;
+   margin-top:-68px;
+   margin-bottom: 100px;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: #fff;
-  padding-top: 80px;
-  margin-bottom: 20px;
 }
 
 .heroSection {
@@ -79,13 +76,11 @@ header div{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
   gap: 20px;
 }
 
 .heroSection h1 {
   font-size: 72px;
-  padding: 20px 100px;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -93,8 +88,6 @@ header div{
 .heroSection p {
   font-weight: 400;
   margin-bottom: 20px;
-  padding: 0 300px;
-  /* max-width: 00px; */
 }
 
 .intro {
@@ -108,7 +101,6 @@ header div{
   color: #fff;
   transition: background-color 0.3s ease;
 }
-
 .intro:hover {
   background-color: #5a00d0;
 }
@@ -122,7 +114,7 @@ header div{
 }
 
 .serviceSection {
-  margin-bottom: 100px;
+  margin-bottom: 10px 0;
 }
 
 .serviceHeading {
@@ -130,7 +122,6 @@ header div{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 80px 0 40px;
   text-align: center;
 }
 
@@ -142,13 +133,14 @@ header div{
   text-align: center;
   text-transform: uppercase;
   color: #6c00ff;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .serviceHeading h2 {
   font-size: 36px;
   font-weight: bold;
   margin-top: 0;
+  margin-bottom: 50px;
   color: #333;
 }
 
@@ -157,7 +149,7 @@ header div{
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-  padding: 0 20px;
+  margin-bottom: 100px;
 }
 
 .subItems {
@@ -167,7 +159,6 @@ header div{
   text-align: center;
   flex: 1 1 300px;
   padding: 20px;
- 
 }
 
 .imgWrapper {
@@ -183,14 +174,12 @@ header div{
 }
 
 .imgWrapper img {
-  padding: 20px;
   max-width: 100%;
-  height: auto;
 }
 
-.subItems h3 {
+.subItems h4 {
   margin-bottom: 15px;
-  /* font-size: 18px; */
+ 
   color: #333;
 }
 
@@ -199,22 +188,24 @@ header div{
   padding: 0;
   line-height: 1.6;
 }
+.features{
+  margin-bottom: 10px;
+}
 
 .featureContent {
   display: flex; 
   justify-content: space-between;
   align-items: center;  
- padding:100px 0;
+ margin-bottom: 100px;
  /* border: 2px solid red; */
 
-  gap: 30px; 
-}
-.featureContent > div{
- margin:0 70px;
+  gap: 200px; 
 }
 
-.reverse > div:last-child { 
-  order: -1; 
+
+.reverse{ 
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .featureContent h2{
@@ -268,9 +259,9 @@ color: #393E46;
     text-decoration:none; 
     margin-bottom:20px;
 }
-.Pic1{
+.Pic{
  box-shadow: 30px 30px 0px #6C00FF;
 }
-.Pic2{
+.reverse .Pic{
   box-shadow: -30px -30px 0px #6C00FF;
 }
